--- a/Hjemmeside.html
+++ b/Hjemmeside.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My site</title>
-
+    <link rel="stylesheet" type="text/css" href="Grid.css">
 </head>
 <body>
-    <h1>Velkommen</h1>
-
+   
+    <div class="grid-container">
+        <div class="item1"><h2>
+            Velkommen</h2>
 <p>
-    poasdfj odsf jeqwm mm qwetm qmwqetm mwqet mweqt mwqe mqwetm mqwet mqwem mewm umtm lq
+    Dette er min hjemmeside
 </p>
+</div>
+<div class="item2">
 <ul>
 
     <il> dlddkdkdkd </il>
