--- a/Hjemmeside/index.html
+++ b/Hjemmeside/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html><html lang="en"><head>
     <script src="../p5lib/p5.js"></script>
     <script src="../p5lib/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../p5lib/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
   </head>
   <body>
-    <script src="sketch.js"></script>
-  
-
+  <a class="butt1" href="https://danielyde.github.io/School/" target="_blank">Website</a>
 </body></html>
