--- a/Hjemmeside/index.html
+++ b/Hjemmeside/index.html
@@ -6,5 +6,8 @@
 
   </head>
   <body>
-  <a class="butt1" href="https://danielyde.github.io/School/" target="_blank">Website</a>
+    <h1>This is my website</h1>
+
+    <a class="butt1" href="https://danielyde.github.io/School/" target="_blank">Website</a>
+    <a class="butt1" href="https://github.com/DanielYde/School" target="_blank">Things</a>
 </body></html>
