--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <script src="/p5lib/p5.js"></script>
     <script src="/p5lib/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/Primary_Website/style.css">
+    <link rel="stylesheet" type="text/css" href="https://github.com/DanielYde/School/blob/master/Primary_Website/style.css">
     <meta charset="utf-8">
 
   </head>
