--- a/Stickman/index.html
+++ b/Stickman/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html><html lang="en"><head>
     <script src="../p5lib/p5.js"></script>
     <script src="../p5lib/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../p5lib/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <div class="Stickman">
+      <script src="sketch.js"></script>
+    </div>
+    
   
 
 </body></html>
