--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
       <div class="btn-6">
         <button>CONSTRUCTION</button>
       </div>
-    
-      <div class="line">
-        <
-      </div>
-
+  
     </div> 
+
+  
+
+    <hr class="new1">
+    <hr class="new2">
+    <hr class="new3">
+    <div class="vl1"></div>
+    <div class="vl2"></div>
+
 </body></html>
