--- a/Stickman/index.html
+++ b/Stickman/index.html
@@ -6,10 +6,18 @@
 
   </head>
   <body>
+
+    <h1>This is my stickman</h1>
+
     <div class="Stickman">
-      <script src="sketch.js"></script>
+      <script src="sketch.js" id="stick"></script>
     </div>
     
+    <div class="btn-group">
+     
+      <div class="btn-1">
+        <button onclick="window.location.href='http://danielyde.github.io'">HOME</button>
+      </div>
   
 
 </body></html>
