--- a/Stickman/index.html
+++ b/Stickman/index.html
@@ -20,9 +20,12 @@
     <div class="grid-container">
       <div class="left"></div>
       <div class="middle"></div>
-      <div class="right"><script src="sketch.js"></script></div>
+      <div class="right">
+        
+      </div>
     </div>  
 
+    <script class="right" src="sketch.js"></script>
     
 
 
