--- a/Stickman/index.html
+++ b/Stickman/index.html
@@ -9,15 +9,14 @@
 
     <h1>This is my stickman</h1>
 
-    <div><script src="sketch.js"></script></div>
+    <div class="game-container"><script src="sketch.js"></script></div>
 
 
     <div class="btn-group">
-     
       <div class="btn-1">
         <button onclick="window.location.href='http://danielyde.github.io'">HOME</button>
       </div>
-  </div>
+    </div>
 
 
  
