--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <button onclick="window.location.href='../Jumping_ball/index.html'">JUMPING BALL</button>
       </div> 
      
-      <div class="btn-3 disabled">
-        <button>CONSTRUCTION</button>
+      <div class="btn-3">
+        <button onclick="window.location.href='../Changing_Objects/index.html'">CHANGING OBJECT</button>
       </div>
     
       <div class="btn-4 disabled">
