--- a/Changing_Objects/index.html
+++ b/Changing_Objects/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <h1>This is my stickman</h1>
+    <h1>These are my Changing Objects</h1>
 
     <div><script src="sketch.js"></script></div>
 
