--- a/Changing_Objects/index.html
+++ b/Changing_Objects/index.html
@@ -9,7 +9,8 @@
 
     <h1>These are my Changing Objects</h1>
 
-    <div><script src="sketch.js"></script></div>
+    <div id="game"></div>
+    <script src="sketch.js"></script>
 
 
     <div class="btn-group">
