--- a/Stickman/index.html
+++ b/Stickman/index.html
@@ -9,7 +9,8 @@
 
     <h1>This is my stickman</h1>
 
-    <div><script src="sketch.js"></script></div>
+    <div id="game"></div>
+      <script src="sketch.js"></script>
 
 
     <div class="btn-group">
