--- a/Jumping_ball/index.html
+++ b/Jumping_ball/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html><html lang="en"><head>
   <script src="../p5lib/p5.js"></script>
   <script src="../p5lib/p5.sound.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../p5lib/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
 
 </head>
 <body>
-  <script src="sketch.js"></script>
 
+  <h1>This is my Jumping Ball</h1>
 
+  <div id="game"></div>
+    <script src="sketch.js"></script>
+
+  <div class="btn-group">
+    <div class="btn-1">
+      <button onclick="window.location.href='http://danielyde.github.io'">HOME</button>
+    </div>
+  </div>
 </body></html>
