--- a/Stickman/index.html
+++ b/Stickman/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <h1>This is my stickman</h1>
+    <h1>This is my Stickman</h1>
 
     <div id="game"></div>
       <script src="sketch.js"></script>
