--- a/.Skabelon/index.html
+++ b/.Skabelon/index.html
@@ -6,7 +6,13 @@
 
   </head>
   <body>
+    <div id="game"></div>
     <script src="sketch.js"></script>
   
+    <div class="btn-group">
+      <div class="btn-1">
+        <button onclick="window.location.href='http://danielyde.github.io'">HOME</button>
+      </div>
+    </div>
 
 </body></html>
