--- a/Loops/index.html
+++ b/Loops/index.html
@@ -6,12 +6,27 @@
 
   </head>
   <body>
+
+    <h1>These are my loops</h1>
+
     <div id="game"></div>
     <script src="sketch.js"></script>
   
     <div class="btn-group">
       <div class="btn-1">
         <button onclick="window.location.href='http://danielyde.github.io'">HOME</button>
+      </div>
+      <div class="btn-2">
+        <button onclick="Countdown()">One</button>
+      </div>
+      <div class="btn-3">
+        <button onclick="Plus()">Two</button>
+      </div>
+      <div class="btn-4">
+        <button onclick="Tabeller()">Three</button>
+      </div>
+      <div class="btn-5">
+        <button onclick="Ligninger()">Four</button>
       </div>
     </div>
 
