--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <button onclick="window.location.href='../Changing_Objects/index.html'">CHANGING OBJECT</button>
       </div>
     
-      <div class="btn-4 disabled">
-        <button>CONSTRUCTION</button>
+      <div class="btn-4">
+        <button onclick="window.location.href='../Loops/index.html'">LOOPS</button>
       </div>
     
       <div class="btn-5 disabled">
