--- a/Stickman/index.html
+++ b/Stickman/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html><html lang="en"><head>
-    <script src="../p5lib/p5.js"></script>
-    <script src="../p5lib/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
+  <script src="../p5lib/p5.js"></script>
+  <script src="../p5lib/p5.sound.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8">
 
-  </head>
-  <body>
+</head>
+<body>
+<div id="page-container">
+<div id="content-wrap">
 
-    <h1>This is my Stickman</h1>
+  <header class="banner">
+    <h1>Programming B</h1>
+    <p>This website is purely for my journey in programming</p>
+  </header>
+  
+  <nav>
+    <ul>
+      <li ><a href="../index.html">home</a></li>
+      <li><a href="index.html" >about</a></li>
+      <li><a href="../Stickman/index.html"  id="current">stickman</a></li>
+      <li><a href="../Jumping_ball/index.html">jumping ball</a></li>
+      <li><a href="../Changing_Objects/index.html">changing objects</a></li>
+      <li><a href="../Loops/index.html">loops</a></li>
+    </ul>
+  </nav>
+  
+  <div id="game"></div> 
 
-    <div id="game"></div>
-      <script src="sketch.js"></script>
+  <script src="sketch.js"></script> 
+</body> 
 
-    <div class="btn-group">
-      <div class="btn-1">
-        <button onclick="window.location.href='http://danielyde.github.io'">HOME</button>
-      </div>
-    </div>
+</div>  
+  <footer id="footer">
+    <p><a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a></p>
+  </footer>
+</div>
 </body></html>
