--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <script src="../p5lib/p5.js"></script>
     <script src="../p5lib/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
     <meta charset="utf-8">
 
   </head>
@@ -16,12 +16,12 @@
     
     <nav>
       <ul>
-        <li ><a href="index.html" id="current">home</a></li>
+        <li ><a href="../index.html" id="current">home</a></li>
         <li><a href="index.html" >about</a></li>
-        <li><a href="Startside.html">stickman</a></li>
-        <li><a href="Startside.html">jumping ball</a></li>
-        <li><a href="Startside.html">changing objects</a></li>
-        <li><a href="Startside.html">loops</a></li>
+        <li><a href="../Stickman/index.html">stickman</a></li>
+        <li><a href="../Jumping_ball/index.html">jumping ball</a></li>
+        <li><a href="../Changing_Objects/index.html">changing objects</a></li>
+        <li><a href="../Loops/index.html">loops</a></li>
       </ul>
     </nav>
     
