--- a/Loops/index.html
+++ b/Loops/index.html
@@ -1,33 +1,91 @@
 <!DOCTYPE html><html lang="en"><head>
-    <script src="../p5lib/p5.js"></script>
-    <script src="../p5lib/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
+  <script src="../p5lib/p5.js"></script>
+  <script src="../p5lib/p5.sound.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../Loops/style.css">
+  <meta charset="utf-8">
 
-  </head>
-  <body>
+</head>
+<body>
+<div id="page-container">
+<div id="content-wrap">
 
-    <h1>These are my loops</h1>
-
-    <div id="game"></div>
-    <script src="sketch.js"></script>
+  <header class="banner">
+    <h1>Programming B</h1>
+    <p>HTX Thisted - Daniel x21</p>
+  </header>
   
-    <div class="btn-group">
-      <div class="btn-1">
-        <button onclick="window.location.href='http://danielyde.github.io'">HOME</button>
-      </div>
-      <div class="btn-2">
-        <button onclick="Countdown()">One</button>
-      </div>
-      <div class="btn-3">
-        <button onclick="Plus()">Two</button>
-      </div>
-      <div class="btn-4">
-        <button onclick="Tabeller()">Three</button>
-      </div>
-      <div class="btn-5">
-        <button onclick="Ligninger()">Four</button>
-      </div>
-    </div>
+  <nav>
+    <ul>
+      <li ><a href="../index.html" >home</a></li>
+      <li><a href="index.html" >about</a></li>
+      <li><a href="../Stickman/index.html">stickman</a></li>
+      <li><a href="../Jumping_ball/index.html">jumping ball</a></li>
+      <li><a href="../Changing_Objects/index.html">changing objects</a></li>
+      <li><a href="../Loops/index.html" id="current">loops</a></li>
+    </ul>
+  </nav>
 
+<div id="game"></div>
+<script src="sketch.js"></script>
+
+  <main>
+      <section>
+        <h2>My Loops</h2>
+        <article>
+          <header>
+            <h3>Assignment number 1</h3>
+          </header>
+          <p>Countdown from 10 to 0 in console</p>
+          <button onclick="Countdown()">Number 1</button>
+        </article>
+        <article>
+          <header>
+            <h3>Assignment number 2</h3>
+          </header>
+          <p>Calculates (1+2+3+4+5+...20)</p>
+          <button onclick="Plus()">Number 2</button>
+        </article>
+        <article>
+          <header>
+            <h3>Assignment number 3</h3>
+          </header>
+          <p>Prints out tables between 2 and 10</p>
+          <button onclick="Tabeller()">Number 3</button>
+        </article>
+        <article>
+          <header>
+            <h3>Assignment number 4</h3>
+          </header>
+          <p>Calculates the y value in the equation</p>
+          <button onclick="Ligninger()">Number 1</button>
+        </article>
+      </section>
+    </main>
+
+</div>  
+  <footer id="footer">
+    <p><a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a></p>
+  </footer>
+</div>
+</div>
 </body></html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
