--- a/Stickman/index.html
+++ b/Stickman/index.html
@@ -11,7 +11,7 @@
 
   <header class="banner">
     <h1>Programming B</h1>
-    <p>This website is purely for my journey in programming</p>
+    <p>HTX Thisted - Daniel x21</p>
   </header>
   
   <nav>
