--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="banner">
       <h1>Programming B</h1>
-      <p>This website is purely for my journey in programming</p>
+      <p>HTX Thisted - Daniel x21</p>
     </header>
     
     <nav>
@@ -35,4 +35,4 @@
       <p><a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a></p>
     </footer>
 </div>
-</body></html>
+</html>
