--- a/Loops/index.html
+++ b/Loops/index.html
@@ -31,11 +31,12 @@
   <main>
       <section>
         <h2>My Loops</h2>
+        <h3>Prints out stuff in console</h3>
         <article>
           <header>
             <h3>Assignment number 1</h3>
           </header>
-          <p>Countdown from 10 to 0 in console</p>
+          <p>Countdown from 10 to 0</p>
           <button onclick="Countdown()">Number 1</button>
         </article>
         <article>
@@ -57,7 +58,7 @@
             <h3>Assignment number 4</h3>
           </header>
           <p>Calculates the y value in the equation</p>
-          <button onclick="Ligninger()">Number 1</button>
+          <button onclick="Ligninger()">Number 4</button>
         </article>
       </section>
     </main>
