--- a/Jumping_ball/index.html
+++ b/Jumping_ball/index.html
@@ -6,15 +6,33 @@
 
 </head>
 <body>
+<div id="page-container">
+<div id="content-wrap">
 
-  <h1>This is my Jumping Ball</h1>
+  <header class="banner">
+    <h1>Programming B</h1>
+    <p>HTX Thisted - Daniel x21</p>
+  </header>
+  
+  <nav>
+    <ul>
+      <li ><a href="../index.html" >home</a></li>
+      <li><a href="index.html" >about</a></li>
+      <li><a href="../Stickman/index.html">stickman</a></li>
+      <li><a href="../Jumping_ball/index.html" id="current">jumping ball</a></li>
+      <li><a href="../Changing_Objects/index.html">changing objects</a></li>
+      <li><a href="../Loops/index.html">loops</a></li>
+    </ul>
+  </nav>
+  
+  <div id="game"></div> 
 
-  <div id="game"></div>
-    <script src="sketch.js"></script>
+  <script src="sketch.js"></script> 
+</body> 
 
-  <div class="btn-group">
-    <div class="btn-1">
-      <button onclick="window.location.href='http://danielyde.github.io'">HOME</button>
-    </div>
-  </div>
-</body></html>
+</div>  
+  <footer id="footer">
+    <p><a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a></p>
+  </footer>
+</div>
+</html>
