--- a/About/index.html
+++ b/About/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <script src="../p5lib/p5.js"></script>
     <script src="../p5lib/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
   </head>
@@ -25,9 +25,6 @@
       </ul>
     </nav>
     
-    <div id="clock">8:10:45</div> 
-  
-    <script src="sketch.js"></script> 
 </body> 
 
   </div>  
