--- a/Loops/index.html
+++ b/Loops/index.html
@@ -17,7 +17,7 @@
   <nav>
     <ul>
       <li ><a href="../index.html" >home</a></li>
-      <li><a href="index.html" >about</a></li>
+      <li><a href="../About/index.html" >about</a></li>
       <li><a href="../Stickman/index.html">stickman</a></li>
       <li><a href="../Jumping_ball/index.html">jumping ball</a></li>
       <li><a href="../Changing_Objects/index.html">changing objects</a></li>
