--- a/About/index.html
+++ b/About/index.html
@@ -16,15 +16,37 @@
     
     <nav>
       <ul>
-        <li ><a href="../index.html" id="current">home</a></li>
-        <li><a href="../About/index.html" >about</a></li>
+        <li ><a href="../index.html" >home</a></li>
+        <li><a href="../About/index.html" id="current" >about</a></li>
         <li><a href="../Stickman/index.html">stickman</a></li>
         <li><a href="../Jumping_ball/index.html">jumping ball</a></li>
         <li><a href="../Changing_Objects/index.html">changing objects</a></li>
         <li><a href="../Loops/index.html">loops</a></li>
       </ul>
     </nav>
-    
+
+    <main>
+      <section>
+        <h2>About me and this website</h2>
+        <article>
+          <header>
+            <h3>Purpose</h3>
+          </header>
+          <p>-----------------</p>
+          <p>The purpose of this website, is to upload the different kind of school programming assignments.</p>
+          <p>I will upload all of my progress and the different assignments to this website, in order to keep track of everything.</p>
+        </article>
+        <article>
+          <header>
+            <h3>Me</h3>
+          </header>
+          <p>-----------------</p>
+          <p>I am currently undergoing a programming class, and this is the current progress of my programming skills. I am uploading everything I make to this website, and people will be able to watch the progress.</p>
+          <p>The different links in the nav bar, will take you to my different projects</p>
+        </article>
+      </section>
+    </main>
+
 </body> 
 
   </div>  
