--- a/About/index.html
+++ b/About/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <script src="../p5lib/p5.js"></script>
     <script src="../p5lib/p5.sound.min.js"></script>
+    <title>Programming</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
