--- a/Jumping_ball/index.html
+++ b/Jumping_ball/index.html
@@ -23,6 +23,7 @@
       <li><a href="../Jumping_ball/index.html" id="current">jumping ball</a></li>
       <li><a href="../Changing_Objects/index.html">changing objects</a></li>
       <li><a href="../Loops/index.html">loops</a></li>
+      <li><a href="../Parabel/index.html">parabola</a></li>
     </ul>
   </nav>
   
