--- a/Parabel/index.html
+++ b/Parabel/index.html
@@ -29,7 +29,7 @@
     <div id="button-container">   
         <button id="minus-ti" onclick="changeVal('val3')">-10</button>
         <button id="minus-et" onclick="changeVal('val2')">-1</button>
-        <button id="vis-d" onclick="display()">Display D</button>
+        <button id="vis-d" onclick="display()">Display Lines</button>
         <button id="plus-et" onclick="changeVal('val1')">+1</button>
         <button id="plus-ti" onclick="changeVal('val4')">+10</button>
     </div>
