--- a/Jumping_ball/index.html
+++ b/Jumping_ball/index.html
@@ -4,7 +4,8 @@
   <title>Programming</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="page-container">
