--- a/Jumping_ball/index.html
+++ b/Jumping_ball/index.html
@@ -17,15 +17,13 @@
   </header>
   
   <nav>
-    <ul>
-      <li ><a href="../index.html" >home</a></li>
-      <li><a href="index.html" >about</a></li>
-      <li><a href="../Stickman/index.html">stickman</a></li>
-      <li><a href="../Jumping_ball/index.html" id="current">jumping ball</a></li>
-      <li><a href="../Changing_Objects/index.html">changing objects</a></li>
-      <li><a href="../Loops/index.html">loops</a></li>
-      <li><a href="../Parabel/index.html">parabola</a></li>
-    </ul>
+    <a href="../index.html">home</a>
+    <a href="../About/index.html" >about</a>
+    <a href="../Stickman/index.html">stickman</a>
+    <a href="../Jumping_ball/index.html" id="current">jumping ball</a>
+    <a href="../Changing_Objects/index.html">changing objects</a>
+    <a href="../Loops/index.html">loops</a>
+    <a href="../Parabel/index.html">parabola</a>
   </nav>
   
   <div id="game"></div> 
