--- a/Parabel/index.html
+++ b/Parabel/index.html
@@ -17,15 +17,13 @@
     </header>
     
     <nav>
-      <ul>
-        <li ><a href="../index.html">home</a></li>
-        <li><a href="../About/index.html" >about</a></li>
-        <li><a href="../Stickman/index.html">stickman</a></li>
-        <li><a href="../Jumping_ball/index.html">jumping ball</a></li>
-        <li><a href="../Changing_Objects/index.html">changing objects</a></li>
-        <li><a href="../Loops/index.html">loops</a></li>
-        <li><a href="../Parabel/index.html" id="current">parabola</a></li>
-      </ul>
+      <a href="../index.html" >home</a></li>
+      <a href="../Stickman/index.html">stickman</a>
+      <a href="../About/index.html" id="current" >about</a>
+      <a href="../Jumping_ball/index.html">jumping ball</a>
+      <a href="../Changing_Objects/index.html">changing objects</a>
+      <a href="../Loops/index.html">loops</a>
+      <a href="../Parabel/index.html">parabola</a>
     </nav>
     <div id="button-container">   
         <button id="minus-ti" onclick="changeVal('val3')">-10</button>
