--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
     </header>
     
     <nav>
-      <ul>
-        <li ><a href="../index.html" id="current">home</a></li>
-        <li><a href="../About/index.html" >about</a></li>
-        <li><a href="../Stickman/index.html">stickman</a></li>
-        <li><a href="../Jumping_ball/index.html">jumping ball</a></li>
-        <li><a href="../Changing_Objects/index.html">changing objects</a></li>
-        <li><a href="../Loops/index.html">loops</a></li>
-        <li><a href="../Parabel/index.html">parabola</a></li>
-      </ul>
+      <a href="../index.html" >home</a></li>
+      <a href="../Stickman/index.html">stickman</a>
+      <a href="../About/index.html" id="current" >about</a>
+      <a href="../Jumping_ball/index.html">jumping ball</a>
+      <a href="../Changing_Objects/index.html">changing objects</a>
+      <a href="../Loops/index.html">loops</a>
+      <a href="../Parabel/index.html">parabola</a>
     </nav>
     
     <div id="clock">8:10:45</div> 
