--- a/Stickman/index.html
+++ b/Stickman/index.html
@@ -18,8 +18,8 @@
   
   <nav>
     <a href="../index.html" >home</a></li>
-    <a href="../Stickman/index.html">stickman</a>
-    <a href="../About/index.html" id="current" >about</a>
+    <a href="../Stickman/index.html" id="current" >stickman</a>
+    <a href="../About/index.html">about</a>
     <a href="../Jumping_ball/index.html">jumping ball</a>
     <a href="../Changing_Objects/index.html">changing objects</a>
     <a href="../Loops/index.html">loops</a>
