--- a/Loops/index.html
+++ b/Loops/index.html
@@ -19,10 +19,10 @@
   <nav>
     <a href="../index.html" >home</a></li>
     <a href="../Stickman/index.html">stickman</a>
-    <a href="../About/index.html" id="current" >about</a>
+    <a href="../About/index.html">about</a>
     <a href="../Jumping_ball/index.html">jumping ball</a>
     <a href="../Changing_Objects/index.html">changing objects</a>
-    <a href="../Loops/index.html">loops</a>
+    <a href="../Loops/index.html" id="current" >loops</a>
     <a href="../Parabel/index.html">parabola</a>
   </nav>
 
