--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </header>
     
     <nav>
-      <a href="../index.html" >home</a></li>
+      <a href="../index.html" id="current" >home</a></li>
       <a href="../Stickman/index.html">stickman</a>
-      <a href="../About/index.html" id="current" >about</a>
+      <a href="../About/index.html">about</a>
       <a href="../Jumping_ball/index.html">jumping ball</a>
       <a href="../Changing_Objects/index.html">changing objects</a>
       <a href="../Loops/index.html">loops</a>
