--- a/Parabel/index.html
+++ b/Parabel/index.html
@@ -37,7 +37,7 @@
     <script src="sketch.js"></script> 
     
     <footer id="footer">
-      <p><a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a></p>
+      <a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a>
     </footer>
   </div>  
 </div>
