--- a/About/index.html
+++ b/About/index.html
@@ -17,9 +17,9 @@
     </header>
     
     <nav>
-      <a href="../index.html" >home</a></li>
+      <a href="../index.html"></a>home</a>
+      <a href="../About/index.html" id="current">about</a>
       <a href="../Stickman/index.html">stickman</a>
-      <a href="../About/index.html" id="current" >about</a>
       <a href="../Jumping_ball/index.html">jumping ball</a>
       <a href="../Changing_Objects/index.html">changing objects</a>
       <a href="../Loops/index.html">loops</a>
@@ -50,7 +50,7 @@
 
     
     <footer id="footer">
-      <p><a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a></p>
+      <a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a>
     </footer>
   </div>  
 </div>
