--- a/Changing_Objects/index.html
+++ b/Changing_Objects/index.html
@@ -18,7 +18,7 @@
   
   <nav>
     <a href="../index.html">home</a>
-    <a href="../About/index.html" >about</a>
+    <a href="../About/index.html">about</a>
     <a href="../Stickman/index.html">stickman</a>
     <a href="../Jumping_ball/index.html">jumping ball</a>
     <a href="../Changing_Objects/index.html" id="current">changing objects</a>
@@ -31,7 +31,7 @@
   <script src="sketch.js"></script> 
   
   <footer id="footer">
-    <p><a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a></p>
+    <a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a>
   </footer>
 </div>  
 </div>
