--- a/Loops/index.html
+++ b/Loops/index.html
@@ -17,12 +17,12 @@
   </header>
   
   <nav>
-    <a href="../index.html" >home</a></li>
-    <a href="../Stickman/index.html">stickman</a>
+    <a href="../index.html">home</a>
     <a href="../About/index.html">about</a>
+    <a href="../Stickman/index.html">stickman</a>
     <a href="../Jumping_ball/index.html">jumping ball</a>
     <a href="../Changing_Objects/index.html">changing objects</a>
-    <a href="../Loops/index.html" id="current" >loops</a>
+    <a href="../Loops/index.html" id="current">loops</a>
     <a href="../Parabel/index.html">parabola</a>
   </nav>
 
@@ -66,7 +66,7 @@
 
 </div>  
   <footer id="footer">
-    <p><a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a></p>
+    <a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a>
   </footer>
 </div>
 </div>
