--- a/Stickman/index.html
+++ b/Stickman/index.html
@@ -30,7 +30,7 @@
 
   <script src="sketch.js"></script> 
   <footer id="footer">
-    <p><a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a></p>
+    <a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a>
   </footer>
   
 </div>  
