--- a/Parabel/index.html
+++ b/Parabel/index.html
@@ -17,13 +17,13 @@
     </header>
     
     <nav>
-      <a href="../index.html" >home</a></li>
-      <a href="../Stickman/index.html">stickman</a>
+      <a href="../index.html">home</a>
       <a href="../About/index.html">about</a>
+      <a href="../Stickman/index.html">stickman</a>
       <a href="../Jumping_ball/index.html">jumping ball</a>
       <a href="../Changing_Objects/index.html">changing objects</a>
       <a href="../Loops/index.html">loops</a>
-      <a href="../Parabel/index.html" id="current" >parabola</a>
+      <a href="../Parabel/index.html" id="current">parabola</a>
     </nav>
     <div id="button-container">   
         <button id="minus-ti" onclick="changeVal('val3')">-10</button>
