--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </header>
     
     <nav>
-      <a href="../index.html" id="current" >home</a></li>
-      <a href="../Stickman/index.html">stickman</a>
+      <a href="../index.html" id="current">home</a>
       <a href="../About/index.html">about</a>
+      <a href="../Stickman/index.html">stickman</a>
       <a href="../Jumping_ball/index.html">jumping ball</a>
       <a href="../Changing_Objects/index.html">changing objects</a>
       <a href="../Loops/index.html">loops</a>
@@ -32,7 +32,7 @@
     <script src="sketch.js"></script> 
     
     <footer id="footer">
-      <p><a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a></p>
+      <a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a>
     </footer>
   </div>  
 </div>
