--- a/About/index.html
+++ b/About/index.html
@@ -17,7 +17,7 @@
     </header>
     
     <nav>
-      <a href="../index.html"></a>home</a>
+      <a href="../index.html">home</a>
       <a href="../About/index.html" id="current">about</a>
       <a href="../Stickman/index.html">stickman</a>
       <a href="../Jumping_ball/index.html">jumping ball</a>
