--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="icon" href="../HTML/Pictures/Letter-F-icon.png" type="image/png" sizes="16x1 v6">
+    <link rel="icon" href="../HTML/Pictures/Letter-F-icon.png" type="image/png">
 
   </head>
   <body>
