--- a/Parabel/index.html
+++ b/Parabel/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <script src="../p5lib/p5.js"></script>
     <script src="../p5lib/p5.sound.min.js"></script>
-    <title>Programming</title>
+    <title>Programming - Parabola</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <link rel="preconnect" href="https://fonts.gstatic.com">
