--- a/About/index.html
+++ b/About/index.html
@@ -27,6 +27,8 @@
       <a href="../Parabel/index.html">parabola</a>
     </nav>
 
+    <div id="game"></div>
+
     <main>
       <section>
         <h2>About me and this website</h2>
