--- a/About/index.html
+++ b/About/index.html
@@ -27,7 +27,7 @@
       <a href="../Parabel/index.html">parabola</a>
     </nav>
 
-    <div id="game"></div>
+    <div id="game">
 
     <main>
       <section>
@@ -50,7 +50,7 @@
         </article>
       </section>
     </main>
-
+  </div>
     
     <footer id="footer">
       <a href="https://github.com/DanielYde/danielyde.github.io">Github Page</a>
