Added multiple bouncing balls

--- a/About/index.html
+++ b/About/index.html
@@ -25,6 +25,7 @@
       <a href="../Changing_Objects/index.html">changing objects</a>
       <a href="../Loops/index.html">loops</a>
       <a href="../Parabel/index.html">parabola</a>
+      <a href="/Multiple_Bouncing_Balls/index.html">Balls</a>
     </nav>
 
     <div id="game">
