--- a/About/index.html
+++ b/About/index.html
@@ -26,6 +26,7 @@
       <a href="../Loops/index.html">loops</a>
       <a href="../Parabel/index.html">parabola</a>
       <a href="/Multiple_Bouncing_Balls/index.html">Balls</a>
+      <a href="../Multiple_Bouncing_Balls/index.html">balls</a>
     </nav>
 
     <div id="game">
