--- a/Parabel/index.html
+++ b/Parabel/index.html
@@ -25,6 +25,7 @@
       <a href="../Changing_Objects/index.html">changing objects</a>
       <a href="../Loops/index.html">loops</a>
       <a href="../Parabel/index.html" id="current">parabola</a>
+      <a href="../Multiple_Bouncing_Balls/index.html">balls</a>
     </nav>
     <div id="button-container">   
         <button id="minus-ti" onclick="changeVal('val3')">-10</button>
