--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <a href="../Changing_Objects/index.html">changing objects</a>
       <a href="../Loops/index.html">loops</a>
       <a href="../Parabel/index.html">parabola</a>
+      <a href="../Multiple_Bouncing_Balls/index.html">balls</a>
     </nav>
     
     <div id="clock">8:10:45</div> 
